Fixed some grammar erros im about

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Luciana and I'm a <span>Programmer</span></div>
-                    <p>I'm still a newbie in terms of programming, so I kinda don't have yet a favorite language. I like to studyand discover new stuff. I aim to keep this site and my github repositories update with the things I'm learnig.</p>
-                    <a href="https://github.com/luluthedevil">Check my github</a>
+                    <p>I'm still a newbie in terms of programming, so I kinda don't have a favorite language in the moment. I like to study and discover new stuff. I aim to keep this site and my github repositories updated with the things I'm learning.</p>
+                    <a href="https://github.com/luluthedevil">Check out my github</a>
                 </div>
             </div>
         </div>
