Services I provide section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,42 @@
         </div>
     </section>
 
+    <!-- about section end -->
+    
+    <!-- services section start -->
+
+    <section class="services" id="services">
+        <div class="max-width">
+            <h2 class="title">My services</h2>
+            <div class="serv-content">
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-paint-brush">
+                            <div class="text">Web</div>
+                            <p>I already know some HTML as you as can see, I've done a college project in Vue and my next goal is to learn React.</p>
+                        </i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code">
+                            <div class="text">Code</div>
+                            <p>I aim for good written code. A code not very well written can become a issue in the future.</p>
+                        </i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-chart-line">
+                            <div class="text">Study</div>
+                            <p>I like to study and discover new things, because of that I'm always open to feedback conversations.</p>
+                        </i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
