My skills, os at least some of them

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="box">
                         <i class="fas fa-paint-brush">
                             <div class="text">Web</div>
-                            <p>I already know some HTML as you as can see, I've done a college project in Vue and my next goal is to learn React.</p>
+                            <p>I already know some HTML as you can see, I've done a college project in Vue and my next goal is to learn React.</p>
                         </i>
                     </div>
                 </div>
@@ -93,6 +93,59 @@
                             <div class="text">Study</div>
                             <p>I like to study and discover new things, because of that I'm always open to feedback conversations.</p>
                         </i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- services section end -->
+
+    <!-- skills section start -->
+
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">My skills</h2>
+            <div class="skills-content">
+                <div class="column left">
+                    <div class="text">My creative skill & expiriences.</div>
+                    <p>In the moment there's not a lot I know how to do, but I do my best in learning stuff. Right now these skills here may not be the best you'll see if you're trying to recruit someone, but I'm improving then. I hope you enjoy seeing my improvement as much as I do.</p>
+                </div>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>CSS</span>
+                            <span>55%</span>
+                        </div>
+                        <div class="line css"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>JavaScript</span>
+                            <span>40%</span>
+                        </div>
+                        <div class="line javascript"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Python</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line python"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Vue</span>
+                            <span>30%</span>
+                        </div>
+                        <div class="line vue"></div>
                     </div>
                 </div>
             </div>
