my projects section

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="max-width">
             <div class="logo"><a href="#">Portifo<span>lio.</span></a></div>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -146,6 +146,51 @@
                             <span>30%</span>
                         </div>
                         <div class="line vue"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- skills section end -->
+
+    <!-- projects section start -->
+
+    <section class="projects" id="projects">
+        <div class="max-width">
+            <h2 class="title">My projects</h2>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <div class="box">
+                        <img src="imgs/Captura de tela de 2021-05-17 14-13-53.png" alt="Pacman game">
+                        <div class="text">Pacman game</div>
+                        <p>A mini game made with python.</p>
+                        <p><a href="https://github.com/luluthedevil/pacman_python">github</a></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="imgs/Captura de tela de 2021-05-17 15-40-47.png" alt="Zombie game">
+                        <div class="text">Zombie game</div>
+                        <p>A zombie game made with C# in unity.</p>
+                        <p><a href="https://github.com/luluthedevil/Zombie_game">github</a></p>
+                        <p><a href="https://luluthedevil.github.io/Zombie_game/">Play now!</a></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="imgs/Captura de tela de 2021-05-17 15-46-08.png" alt="Pong game">
+                        <div class="text">Pong game</div>
+                        <p>A mini pong game made with java script.</p>
+                        <p><a href="https://github.com/luluthedevil/pong">github</a></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="imgs/Captura de tela de 2021-05-17 15-49-09.png" alt="Freeway game">
+                        <div class="text">Freeway game</div>
+                        <p>A freeway (cross the street) game made with java script.</p>
+                        <p><a href="https://github.com/luluthedevil/TrabalhoGerencia">github</a></p>
                     </div>
                 </div>
             </div>
