--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#services">Services</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -191,6 +191,50 @@
                         <div class="text">Freeway game</div>
                         <p>A freeway (cross the street) game made with java script.</p>
                         <p><a href="https://github.com/luluthedevil/TrabalhoGerencia">github</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- projects section end -->
+    
+    <!-- contact section start -->
+
+    <section class="contact" id="contact">
+        <div class="max-width">
+            <h2 class="title">Contact me</h2>
+            <div class="contact-content">
+                <div class="column left">
+                    <div class="text">Get in touch</div>
+                    <p>Please go strait to te point and say the reason why are you talking to me in 100 words or less.</p>
+                    <div class="icons">
+                        <div class="row">
+                            <i class="fas fa-user"></i>
+                            <div class="info">
+                                <div class="head">Name:</div>
+                                <div class="sub-title">Luciana Ferreira</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-camera"></i>
+                            <div class="info">
+                                <div class="head">Instagram and Twitter:</div>
+                                <div class="sub-title">@luluthedevil</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-envelope"></i>
+                            <div class="info">
+                                <div class="head">Email:</div>
+                                <div class="sub-title">luluthedevil6666@gmail.com</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="column right">
+                    <div class="img">
+                        <a href="https://github.com/luluthedevil"><img src="imgs/Captura de tela de 2021-05-19 16-37-15.png" alt=""></a>
                     </div>
                 </div>
             </div>
