an animation, a scroll up btn and e footer

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     <title>Lulu's Personal Portifolio</title>
 </head>
 <body>
+    <div class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
+    </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Portifo<span>lio.</span></a></div>
+            <div class="logo"><a href="#home">Portifo<span>lio.</span></a></div>
             <ul class="menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -38,7 +41,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Luciana Ferreira</div>
-                <div class="text-3">And I'm a <span>Programmer</span></div>
+                <div class="text-3">And I'm a <span class="typing"></span></div>
             </div>
         </div>
     </section>
@@ -240,6 +243,15 @@
             </div>
         </div>
     </section>
+
+    <!-- contact section end -->
+    
+    <!-- footer section start -->
+
+    <footer>
+        <span>Created by <a href="https://github.com/luluthedevil">Luluthedevil</a> | <span class="far fa-copyright"> 2021 All rights reserved.</span></span>
+    </footer>
+
 
     <script src="script.js"></script>
 </body>
