in resposive mode menu closes itself

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <div class="max-width">
             <div class="logo"><a href="#home">Portifo<span>lio.</span></a></div>
             <ul class="menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#home" class="menu-btn">Home</a></li>
+                <li><a href="#about" class="menu-btn">About</a></li>
+                <li><a href="#services" class="menu-btn">Services</a></li>
+                <li><a href="#skills" class="menu-btn">Skills</a></li>
+                <li><a href="#projects" class="menu-btn">Projects</a></li>
+                <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -58,7 +58,7 @@
                     <img src="imgs/20200114_133938_025.jpg" alt="Luciana">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Luciana and I'm a <span>Programmer</span></div>
+                    <div class="text">I'm Luciana and I'm a <span class="typing-2"></span></div>
                     <p>I'm still a newbie in terms of programming, so I kinda don't have a favorite language in the moment. I like to study and discover new stuff. I aim to keep this site and my github repositories updated with the things I'm learning.</p>
                     <a href="https://github.com/luluthedevil">Check out my github</a>
                 </div>
