new card in project

--- a/index.html
+++ b/index.html
@@ -165,6 +165,14 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
+                        <img src="imgs/Captura de tela de 2021-05-27 16-48-58.png" alt="React recipe site">
+                        <div class="text">React recipe site</div>
+                        <p>A simple website made with react, the recipes are from an API.</p>
+                        <p><a href="https://github.com/luluthedevil/react-recipe-site">github</a></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <img src="imgs/Captura de tela de 2021-05-17 14-13-53.png" alt="Pacman game">
                         <div class="text">Pacman game</div>
                         <p>A mini game made with python.</p>
