--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in touch</div>
-                    <p>Please go strait to te point and say the reason why are you talking to me in 100 words or less.</p>
+                    <p>I like <i>straight to the point</i>texts.</p>
+                    <p>I enjoy study new stuff, like frontend and data science things, readeing all kinds of books, watch animes and reading mangas.</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
