adding github api react project

--- a/index.html
+++ b/index.html
@@ -145,6 +145,13 @@
                     </div>
                     <div class="bars">
                         <div class="info">
+                            <span>React</span>
+                            <span>40%</span>
+                        </div>
+                        <div class="line react"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
                             <span>Vue</span>
                             <span>30%</span>
                         </div>
@@ -163,6 +170,14 @@
         <div class="max-width">
             <h2 class="title">My projects</h2>
             <div class="carousel owl-carousel">
+                <div class="card">
+                    <div class="box">
+                        <img src="imgs/WhatsApp Image 2021-09-05 at 12.00.22.jpeg" alt="Github api project">
+                        <div class="text">Github api project</div>
+                        <p>A github API project I made with React.</p>
+                        <p><a href="https://github.com/luluthedevil/github-api-code">github</a></p>
+                    </div>
+                </div>
                 <div class="card">
                     <div class="box">
                         <img src="imgs/Captura de tela de 2021-05-27 16-48-58.png" alt="React recipe site">
