add eletronic urn

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="box">
                         <i class="fas fa-paint-brush">
                             <div class="text">Web</div>
-                            <p>I already know some HTML as you can see, I've done a college project in Vue and my next goal is to learn React.</p>
+                            <p>I already know some HTML and javascript as you can see, there are some other projects with other stuff too.</p>
                         </i>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                     <div class="box">
                         <i class="fas fa-chart-line">
                             <div class="text">Study</div>
-                            <p>I like to study and discover new things, because of that I'm always open to feedback conversations.</p>
+                            <p>I like to study and discover new things and I'm always open to feedback conversations.</p>
                         </i>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skill & expiriences.</div>
-                    <p>In the moment there's not a lot I know how to do, but I do my best in learning stuff. Right now these skills here may not be the best you'll see if you're trying to recruit someone, but I'm improving then. I hope you enjoy seeing my improvement as much as I do.</p>
+                    <p>In the moment there's not a lot I know how to do, but I do my best in learning new stuff. Right now these skills here may not be the best you'll see if you're trying to recruit someone, but I'm improving then every day a little. I hope you enjoy seeing my improvement as much as I do.</p>
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -139,7 +139,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>Python</span>
-                            <span>70%</span>
+                            <span>60%</span>
                         </div>
                         <div class="line python"></div>
                     </div>
@@ -170,6 +170,15 @@
         <div class="max-width">
             <h2 class="title">My projects</h2>
             <div class="carousel owl-carousel">
+                <div class="card">
+                    <div class="box">
+                        <img src="imgs/Captura de tela de 2021-10-06 20-43-24.png" alt="Eletronic urn">
+                        <div class="text">Eletronic urn</div>
+                        <p>Brazilian eletronic urn, it's how we vote in elections.</p>
+                        <p><a href="https://github.com/luluthedevil/eletronic-urn">github</a></p>
+                        <p><a href="https://luluthedevil.github.io/eletronic-urn/">Test it</a></p>
+                    </div>
+                </div>
                 <div class="card">
                     <div class="box">
                         <img src="imgs/WhatsApp Image 2021-09-05 at 12.00.22.jpeg" alt="Github api project">
