--- a/index.html
+++ b/index.html
@@ -181,6 +181,14 @@
                 </div>
                 <div class="card">
                     <div class="box">
+                        <img src="imgs/pong.png" alt="pong">
+                        <div class="text">Pong.py</div>
+                        <p>Pong with python</p>
+                        <p><a href="https://github.com/luluthedevil/pong.py">github</a></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <img src="imgs/WhatsApp Image 2021-09-05 at 12.00.22.jpeg" alt="Github api project">
                         <div class="text">Github api project</div>
                         <p>A github API project I made with React.</p>
@@ -210,14 +218,6 @@
                         <p>A zombie game made with C# in unity.</p>
                         <p><a href="https://github.com/luluthedevil/Zombie_game">github</a></p>
                         <p><a href="https://luluthedevil.github.io/Zombie_game/">Play now!</a></p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="imgs/Captura de tela de 2021-05-17 15-46-08.png" alt="Pong game">
-                        <div class="text">Pong game</div>
-                        <p>A mini pong game made with java script.</p>
-                        <p><a href="https://github.com/luluthedevil/pong">github</a></p>
                     </div>
                 </div>
                 <div class="card">
