connect four game

--- a/index.html
+++ b/index.html
@@ -181,6 +181,14 @@
                 </div>
                 <div class="card">
                     <div class="box">
+                        <img src="imgs/connect_four.png" alt="pong">
+                        <div class="text">Connect four game</div>
+                        <p>Connect four game with python</p>
+                        <p><a href="https://github.com/luluthedevil/connect_four-python">github</a></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <img src="imgs/snake-python.png" alt="pong">
                         <div class="text">Snake game</div>
                         <p>Snake game with python</p>
