add tetris with python

--- a/index.html
+++ b/index.html
@@ -181,7 +181,15 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="imgs/connect_four.png" alt="pong">
+                        <img src="imgs/tetris.png" alt="tetris">
+                        <div class="text">Tetris game</div>
+                        <p>Tetris game with python</p>
+                        <p><a href="https://github.com/luluthedevil/tetris-python">github</a></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="imgs/connect_four.png" alt="connect four">
                         <div class="text">Connect four game</div>
                         <p>Connect four game with python</p>
                         <p><a href="https://github.com/luluthedevil/connect_four-python">github</a></p>
