add todo list with react

--- a/index.html
+++ b/index.html
@@ -181,6 +181,14 @@
                 </div>
                 <div class="card">
                     <div class="box">
+                        <img src="imgs/todo-list.png" alt="todo list">
+                        <div class="text">Todo list</div>
+                        <p>Todo list with react</p>
+                        <p><a href="https://github.com/luluthedevil/todo_list-react">github</a></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <img src="imgs/tetris.png" alt="tetris">
                         <div class="text">Tetris game</div>
                         <p>Tetris game with python</p>
