add memory game with javascript

--- a/index.html
+++ b/index.html
@@ -189,6 +189,15 @@
                 </div>
                 <div class="card">
                     <div class="box">
+                        <img src="imgs/memory_game.png" alt="Memory game">
+                        <div class="text">Memory game</div>
+                        <p>Simple memory game with javascript.</p>
+                        <p><a href="https://github.com/luluthedevil/memory_game">github</a></p>
+                        <p><a href="https://luluthedevil.github.io/memory_game/">Try it</a></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <img src="imgs/tetris.png" alt="tetris">
                         <div class="text">Tetris game</div>
                         <p>Tetris game with python</p>
