weather javascript api

--- a/index.html
+++ b/index.html
@@ -198,6 +198,14 @@
                 </div>
                 <div class="card">
                     <div class="box">
+                        <img src="imgs/weather_javascript_api.png" alt="Weather aplication">
+                        <div class="text">Weather aplication</div>
+                        <p>Simple weather aplication with javascript that gets data from public API.</p>
+                        <p><a href="https://github.com/luluthedevil/javascript_weather_withAPI">github</a></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <img src="imgs/tetris.png" alt="tetris">
                         <div class="text">Tetris game</div>
                         <p>Tetris game with python</p>
