--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="imgs/20200114_133938_025.jpg" alt="Luciana">
+                    <img src="imgs/SNOW_20220312_145524_001.jpg" alt="Luciana">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Luciana and I'm a <span class="typing-2"></span></div>
-                    <p>I'm still a newbie in terms of programming, so I kinda don't have a favorite language in the moment. I like to study and discover new stuff. I aim to keep this site and my github repositories updated with the things I'm learning.</p>
+                    <p>I like to study different types of languages, frameworks and random topics to discover new stuff. I aim to keep this site and my github repositories updated with the projects I'm learning doing.</p>
                     <a href="https://github.com/luluthedevil">Check out my github</a>
                 </div>
             </div>
@@ -112,7 +112,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skill & expiriences.</div>
-                    <p>In the moment there's not a lot I know how to do, but I do my best in learning new stuff. Right now these skills here may not be the best you'll see if you're trying to recruit someone, but I'm improving then every day a little. I hope you enjoy seeing my improvement as much as I do.</p>
+                    <p>In the moment there's not a lot I know how to do, but I do my best in learning new things. Right now these skills here may not be the best, but I'm improving then every day a little. I hope you enjoy seeing my improvement as much as I do.</p>
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -291,8 +291,8 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in touch</div>
-                    <p>I like <i>straight to the point  </i> texts.</p>
-                    <p>I enjoy study new stuff, like frontend and data science things, readeing all kinds of books, watch animes and reading mangas.</p>
+                    <p>I prefer <i>straight to the point  </i> texts.</p>
+                    <p>I enjoy study new things, like frontend and data science, readeing all kinds of books, watch animes and reading mangas.</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
@@ -319,7 +319,7 @@
                 </div>
                 <div class="column right">
                     <div class="img">
-                        <a href="https://github.com/luluthedevil"><img src="imgs/Captura de tela de 2021-05-19 16-37-15.png" alt=""></a>
+                        <a href="https://github.com/luluthedevil"><img src="imgs/Screenshot from 2022-06-03 19-52-42.png" alt=""></a>
                     </div>
                 </div>
             </div>
