crud angular with spring and languages I know

--- a/index.html
+++ b/index.html
@@ -58,9 +58,43 @@
                     <img src="imgs/SNOW_20220312_145524_001.jpg" alt="Luciana">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Luciana and I'm a <span class="typing-2"></span></div>
+                    <div class="text">I'm Luciana and I'm a <span class="typing_2"></span></div>
                     <p>I like to study different types of languages, frameworks and random topics to discover new stuff. I aim to keep this site and my github repositories updated with the projects I'm learning doing.</p>
-                    <a href="https://github.com/luluthedevil">Check out my github</a>
+                    <h3 class="my-languages">Languages I speak</h3>
+                    <table>
+                        <tr>
+                            <th></th>
+                            <th>Listening</th>
+                            <th>Speaking</th>
+                            <th>Writing</th>
+                        </tr>
+                        <tr>
+                            <th>Portuguese (br)</th>
+                            <td>Native</td>
+                            <td>Native</td>
+                            <td>Native</td>
+                        </tr>
+                        <tr>
+                            <th>English</th>
+                            <td>Advanced</td>
+                            <td>Advanced</td>
+                            <td>Intermediary</td>
+                        </tr>
+                        <tr>
+                            <th>Japanese</th>
+                            <td>Intermediary</td>
+                            <td>Beginner</td>
+                            <td>Beginner</td>
+                        </tr>
+                        <tr>
+                            <th>French</th>
+                            <td>Intermediary</td>
+                            <td>Beginner</td>
+                            <td>Intermediary</td>
+                        </tr>
+                        
+                      </table>
+                      <a href="https://github.com/luluthedevil">Check out my github</a>
                 </div>
             </div>
         </div>
@@ -185,6 +219,14 @@
                         <div class="text">Todo list</div>
                         <p>Todo list with react</p>
                         <p><a href="https://github.com/luluthedevil/todo_list-react">github</a></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="imgs/crud-angular-spring-cats.png" alt="Crud angular and spring about cats">
+                        <div class="text">Crud angular and spring about cats</div>
+                        <p>CRUD made with AngularJS and Spring about cats.</p>
+                        <p><a href="https://github.com/luluthedevil/crud-angular-java-cats">github</a></p>
                     </div>
                 </div>
                 <div class="card">
