--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 </div>
                 <div class="column right">
                     <div class="img">
-                        <a href="https://github.com/luluthedevil"><img src="imgs/Screenshot from 2022-06-03 19-52-42.png" alt=""></a>
+                        <a href="https://github.com/luluthedevil"><img src="imgs/github.png" alt=""></a>
                     </div>
                 </div>
             </div>
