Bookstore with angular and spring(java)

--- a/index.html
+++ b/index.html
@@ -208,9 +208,17 @@
                     <div class="box">
                         <img src="imgs/Captura de tela de 2021-10-06 20-43-24.png" alt="Eletronic urn">
                         <div class="text">Eletronic urn</div>
-                        <p>Brazilian eletronic urn, it's how we vote in elections.</p>
+                        <p>Brazilian eletronic urn, it's how we vote in elections. Made with Javascript</p>
                         <p><a href="https://github.com/luluthedevil/eletronic-urn">github</a></p>
                         <p><a href="https://luluthedevil.github.io/eletronic-urn/">Test it</a></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="imgs/bookstore-1.png" alt="Bookstore">
+                        <div class="text">Bookstore</div>
+                        <p>Bookstore made with Angular and Spring(Java)</p>
+                        <p><a href="https://github.com/luluthedevil/crud-angular-java-bookstore">github</a></p>
                     </div>
                 </div>
                 <div class="card">
