--- a/index.html
+++ b/index.html
@@ -55,11 +55,14 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="imgs/SNOW_20220312_145524_001.jpg" alt="Luciana">
+                    <img src="imgs/SNOW_20220616_130735_582.jpg" alt="Luciana">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Luciana and I'm a <span class="typing_2"></span></div>
-                    <p>I like to study different types of languages, frameworks and random topics to discover new stuff. I aim to keep this site and my github repositories updated with the projects I'm learning doing.</p>
+                    <p>I have studied ADS in the IFPB Cajazeiras and will graduate in the end 2022.2, as goal, I aim to become an excellent Software Developer. For that, I usually study some courses and project to complement my knolege.</p>
+                    <p>I like to program, read and perform teamwork where I can learn and also develop my skills of collaboration, leadership and management.</p>
+                    <p>I like to describe myself as a dedicated, motivated and dynamic. Right now I am searching for oportunities to develop myself in a company that allows me to apply the knolege I have acquired in my graduation and courses, so I can develop myself even more in the Software Development area.</p>
+                    <p>Thanl you for you attention, for more information, send me an email.</p>
                     <h3 class="my-languages">Languages I speak</h3>
                     <table>
                         <tr>
@@ -112,7 +115,7 @@
                     <div class="box">
                         <i class="fas fa-paint-brush">
                             <div class="text">Web</div>
-                            <p>I already know some HTML and javascript as you can see, there are some other projects with other stuff too.</p>
+                            <p>I know HTML, CSS and Javascript as you can see here, there are some other projects with other languages too.</p>
                         </i>
                     </div>
                 </div>
@@ -146,9 +149,17 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skill & expiriences.</div>
-                    <p>In the moment there's not a lot I know how to do, but I do my best in learning new things. Right now these skills here may not be the best, but I'm improving then every day a little. I hope you enjoy seeing my improvement as much as I do.</p>
+                    <p>In order to keep updated I take lots of online classes to maintain myself on track to what's new. So I usually do projects and maintain then online to show my skills, a lot I don't put because they don't have the quality I want, so even though there's nothing new in my github, that doesn't necesarelly means I'm not doing anything.</p>
+                    <p>I like code with quality, so I always go for it, it's important a code you can read months later and understand it.</p>
                 </div>
                 <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>GIT</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line git"></div>
+                    </div>
                     <div class="bars">
                         <div class="info">
                             <span>HTML</span>
@@ -159,16 +170,23 @@
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>55%</span>
+                            <span>75%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>40%</span>
+                            <span>60%</span>
                         </div>
                         <div class="line javascript"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Node</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="line node"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
@@ -180,16 +198,9 @@
                     <div class="bars">
                         <div class="info">
                             <span>React</span>
-                            <span>40%</span>
+                            <span>50%</span>
                         </div>
                         <div class="line react"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Vue</span>
-                            <span>30%</span>
-                        </div>
-                        <div class="line vue"></div>
                     </div>
                 </div>
             </div>
@@ -341,8 +352,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in touch</div>
-                    <p>I prefer <i>straight to the point  </i> texts.</p>
-                    <p>I enjoy study new things, like frontend and data science, readeing all kinds of books, watch animes and reading mangas.</p>
+                    <p>Contact me if you want to schedule a meeting to know more about my skills and how I am a good choice for your company.</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
